Build UI component library and fix service formatting