@@ -77,7 +77,7 @@ public class UserItemService {
 
   public void deleteUserItem(Long id) {
     if (!userItemRepository.existsById(id)) {
-      throw new ResourceNotFoundException("User item %d not found".formatted(id));
+      throw new ResourceNotFoundException(String.format("User item %d not found", id));
     }
     userItemRepository.deleteById(id);
   }
@@ -85,19 +85,19 @@ public class UserItemService {
   private UserItem findUserItem(Long id) {
     return userItemRepository
         .findById(id)
-        .orElseThrow(() -> new ResourceNotFoundException("User item %d not found".formatted(id)));
+        .orElseThrow(() -> new ResourceNotFoundException(String.format("User item %d not found", id)));
   }
 
   private User findUser(Long userId) {
     return userRepository
         .findById(userId)
-        .orElseThrow(() -> new ResourceNotFoundException("User %d not found".formatted(userId)));
+        .orElseThrow(() -> new ResourceNotFoundException(String.format("User %d not found", userId)));
   }
 
   private Item findItem(Long itemId) {
     return itemRepository
         .findById(itemId)
-        .orElseThrow(() -> new ResourceNotFoundException("Item %d not found".formatted(itemId)));
+        .orElseThrow(() -> new ResourceNotFoundException(String.format("Item %d not found", itemId)));
   }
 
   private void applyRequest(UserItem userItem, UserItemRequest request, User user, Item item) {
